Forum, New System Link, Image New Tab
Forum Link has been added - iframe and new tab link
Timetabling System Link is now live - pointing to bare index page
Original Image Button added for main image on homepage

--- a/CSS/homestyle.css
+++ b/CSS/homestyle.css
@@ -1,7 +1,7 @@
 #HomeContent {
 	width:940px;
 	margin-top:10px;
-	margin-left:10px;
+	margin-left:10px;	
 }
 
 
@@ -39,6 +39,12 @@ span{
 	
 	font-size: 20px;
 	font-family: helvetica, arial, sans-serif;	
+}
+
+#MainOriginalBtnDiv {
+	position:absolute;
+	top:20px;
+	right:10px;
 }
 
 #IMGContainer {
