--- a/CSS/indexstyle.css
+++ b/CSS/indexstyle.css
@@ -60,19 +60,27 @@ html {
 }
 
 /*		Timetabling System Link			*/
-#NewSystemBtn {
+#NewSystemBtnDiv {
 	position: absolute;
 	top:30px;
 	left:370px;
 	height:40px;
 	width:200px;
+	text-decoration:none !important;
+	
+}
+
+#NewSystemBtn {
+	position: absolute;
+	height:40px;
+	width:200px;
 	
 	line-height:40px;
-	text-align: center;
-	font-size: 20px;
+	text-align:center;
+	font-size:20px;
 	font-family: helvetica, arial, sans-serif;
 	color: #777777;
-	text-decoration:none;
+	text-decoration:none !important;
 	
 	background: linear-gradient(#EDEDED, #A0A0A0);
 	border-radius: 7px;
@@ -83,11 +91,9 @@ html {
 	background: linear-gradient(#A0A0A0, #707070)
 }
 
-span{
-	display: inline-block;
-    vertical-align: middle;
+#NewSystemLink {
+	text-decoration:none !important;
 }
-
 
 /* 				MENU					*/
 #MenuBar {
@@ -103,7 +109,7 @@ span{
 .MenuBtns {
 	float:left;
 	height: 30px;
-	width: 192;
+	width: 160px;
 	
 	/*Text Styling*/
 	text-align: center;
